# flask_tutorial

./: .coverage  .env  pyproject.toml
instance/: flaskr.sqlite  src.sqlite
src/: __init__.py  api_response.py  app_cfg.py  blog.py  context_processor.py  db.py  error_handler.py  html_filter.py  index.py  user.py
src/flask_tutorial.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/models/: blog.py  user.py
src/static/: style.css
src/templates/: base.html  index.html  macro_util.html
src/templates/blog/: index.html
src/templates/user/: register.html
tests/: conftest.py  test_blog.py  test_db.py  test_factory.py  test_user.py
